--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,4 +10,5 @@ body,
 .app {
   height: 100vh;
   width: 100vw;
+  font-family: 'Montserrat', sans-serif;
 }
